--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -21,10 +21,20 @@ jobs:
         name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
       -
+        name: Login to DockerHub
+        if: success() && github.event_name != 'pull_request'
+        uses: docker/login-action@v1
+        with:
+          username: ${ secrets.DOCKER_USERNAME }}
+          password: ${ secrets.DOCKER_PASSWORD }}          
+      -
         name: Run Buildx
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
+            --cache-from "type=local,src=/tmp/.buildx-cache" \
+            --cache-to "type=local,dest=/tmp/.buildx-cache" \
             --output "type=image,push=true" \
             -t fergalmoran/bitchmin-api \
             --file ./server/Dockerfile ./server
+
