--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -24,6 +24,8 @@ jobs:
         name: Login to DockerHub
         if: success() && github.event_name != 'pull_request'
         uses: docker/login-action@v1
+        run: echo ${{ secrets.DOCKER_USERNAME }}
+        run: echo ${{ secrets.DOCKER_PASSWORD }}
         with:
           username: ${ secrets.DOCKER_USERNAME }}
           password: ${ secrets.DOCKER_PASSWORD }}          
