--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -21,11 +21,13 @@ jobs:
         name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
       -
+        name: Show credentials
+        run: echo ${{ secrets.DOCKER_USERNAME }}
+             echo ${{ secrets.DOCKER_PASSWORD }}
+      -
         name: Login to DockerHub
         if: success() && github.event_name != 'pull_request'
         uses: docker/login-action@v1
-        run: echo ${{ secrets.DOCKER_USERNAME }}
-        run: echo ${{ secrets.DOCKER_PASSWORD }}
         with:
           username: ${ secrets.DOCKER_USERNAME }}
           password: ${ secrets.DOCKER_PASSWORD }}          
