--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -29,8 +29,8 @@ jobs:
         if: success() && github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
-          username: ${ secrets.DOCKER_USERNAME }}
-          password: ${ secrets.DOCKER_PASSWORD }}          
+          username: fergalmoran
+          password: F8r3Knuts
       -
         name: Run Buildx
         if: success() && github.event_name != 'pull_request'        
