--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -11,6 +11,11 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
+        name: Login to DockerHub
+        if: success() && github.event_name != 'pull_request'
+        uses: actions/checkout@v1
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      -
         name: Set up Docker Buildx
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v3
@@ -20,17 +25,6 @@ jobs:
       -
         name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
-      -
-        name: Show credentials
-        run: echo ${{ secrets.DOCKER_USERNAME }}
-             echo ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Login to DockerHub
-        if: success() && github.event_name != 'pull_request'
-        uses: docker/login-action@v1
-        with:
-          username: fergalmoran
-          password: F8r3Knuts
       -
         name: Run Buildx
         if: success() && github.event_name != 'pull_request'        
