--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -11,9 +11,8 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        name: Login to DockerHub
-        if: success() && github.event_name != 'pull_request'
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
+      - name: Login to DockerHub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       -
         name: Set up Docker Buildx
