--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -4,34 +4,19 @@ on:
   push:
     branches: trunk
 jobs:
-  buildx:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      -
-      - uses: actions/checkout@v1
-      - name: Login to DockerHub
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      -
-        name: Set up Docker Buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
-        with:
-          buildx-version: latest
-          qemu-version: latest
-      -
-        name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
-      -
-        name: Run Buildx
-        if: success() && github.event_name != 'pull_request'        
-        run: |
-          docker buildx build \
-            --platform linux/arm/v7 \
-            --cache-from "type=local,src=/tmp/.buildx-cache" \
-            --cache-to "type=local,dest=/tmp/.buildx-cache" \
-            --output "type=image,push=true" \
-            -t fergalmoran/bitchmin-api \
-            --file ./server/Dockerfile ./server
+    build:
+        runs-on: ubuntu-latest
+        name: Build image job
+        steps:
+            - name: Checkout master
+              uses: actions/checkout@master
+            - name: Build and publish image
+              uses: ilteoood/docker_buildx@master
+              with:
+                publish: true
+                imageName: fergalmoran/bitchmin-api
+                dockerFile: ./server/Dockerfile
+                buildArg: ./server
+                platform: linux/arm/v7
+                dockerHubUser: ${{secrets.DOCKER_USER}}
+                dockerHubPassword: ${{secrets.DOCKER_PASSWORD}}
