--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -8,15 +8,14 @@ jobs:
         runs-on: ubuntu-latest
         name: Build image job
         steps:
-            - name: Checkout master
-              uses: actions/checkout@master
-            - name: Build and publish image
-              uses: ilteoood/docker_buildx@master
-              with:
-                publish: true
-                imageName: fergalmoran/bitchmin-api
-                dockerFile: ./server/Dockerfile
-                buildArg: ./server
-                platform: linux/arm/v7
-                dockerHubUser: ${{ secrets.DOCKER_USER }}
-                dockerHubPassword: ${{ secrets.DOCKER_PASSWORD }}
+          - name: Checkout code
+            uses: actions/checkout@v2
+
+          - name: Build and push Docker images
+            uses: docker/build-push-action@v1
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+              repository: fergalmoran/bitchmints-api
+              dockerfile: ./server/Dockerfile
+              path: ./server
