--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
         "vuex": "^3.4.0",
         "@mdi/font": "^5.5.55",
         "@types/lodash": "^4.14.161",
-        "compass-mixins": "^0.12.10"
+        "compass-mixins": "^0.12.10",
+        "@vue/cli-service": "~4.5.0"
     },
     "devDependencies": {
         "@types/chai": "^4.2.11",
@@ -39,14 +40,12 @@
         "@typescript-eslint/eslint-plugin": "^2.33.0",
         "@typescript-eslint/parser": "^2.33.0",
         "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-e2e-cypress": "~4.5.0",
         "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-plugin-pwa": "~4.5.0",
         "@vue/cli-plugin-router": "~4.5.0",
         "@vue/cli-plugin-typescript": "~4.5.0",
         "@vue/cli-plugin-unit-mocha": "~4.5.0",
         "@vue/cli-plugin-vuex": "~4.5.0",
-        "@vue/cli-service": "~4.5.0",
         "@vue/eslint-config-airbnb": "^5.0.2",
         "@vue/eslint-config-standard": "^5.1.2",
         "@vue/eslint-config-typescript": "^5.0.2",
