--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,10 +2,10 @@ FROM node:14-stretch as build-stage
 
 WORKDIR /app
 COPY package*.json ./
-RUN yarn install --production
+RUN yarn install
 COPY . .
 COPY .eslintrc.js ./
-RUN yarn build --production
+RUN yarn build --prod
 
 # Create the container from the alpine linux image
 FROM alpine:3.7 as production-image
