--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@mdi/font": "^5.5.55",
         "@types/jwt-decode": "^2.2.1",
+        "@types/lodash": "^4.14.161",
         "axios": "^0.20.0",
         "axios-auth-refresh": "^3.0.0",
+        "compass-mixins": "^0.12.10",
         "core-js": "^3.6.5",
         "dayjs": "^1.8.35",
         "decko": "^1.2.0",
@@ -24,15 +27,12 @@
         "register-service-worker": "^1.7.1",
         "vue": "^2.6.11",
         "vue-class-component": "^7.2.3",
+        "vue-clipboard2": "^0.3.1",
         "vue-property-decorator": "^8.4.2",
         "vue-router": "^3.2.0",
         "vue-toasted": "^1.1.28",
         "vuetify": "^2.2.11",
-        "vuex": "^3.4.0",
-        "@mdi/font": "^5.5.55",
-        "@types/lodash": "^4.14.161",
-        "compass-mixins": "^0.12.10",
-        "@vue/cli-service": "~4.5.0"
+        "vuex": "^3.4.0"
     },
     "devDependencies": {
         "@types/chai": "^4.2.11",
@@ -46,6 +46,7 @@
         "@vue/cli-plugin-typescript": "~4.5.0",
         "@vue/cli-plugin-unit-mocha": "~4.5.0",
         "@vue/cli-plugin-vuex": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
         "@vue/eslint-config-airbnb": "^5.0.2",
         "@vue/eslint-config-standard": "^5.1.2",
         "@vue/eslint-config-typescript": "^5.0.2",
@@ -60,11 +61,11 @@
         "node-sass": "^4.12.0",
         "sass": "^1.19.0",
         "sass-loader": "^8.0.2",
+        "style-resources-loader": "^1.3.2",
         "typescript": "~3.9.3",
+        "vue-cli-plugin-style-resources-loader": "~0.1.4",
         "vue-cli-plugin-vuetify": "~2.0.7",
         "vue-template-compiler": "^2.6.11",
-        "vuetify-loader": "^1.3.0",
-        "style-resources-loader": "^1.3.2",
-        "vue-cli-plugin-style-resources-loader": "~0.1.4"
+        "vuetify-loader": "^1.3.0"
     }
 }
