--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -19,9 +19,6 @@ jobs:
           buildx-version: latest
           qemu-version: latest
       -
-        name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
-      -
         name: Login to DockerHub
         if: success() && github.event_name != 'pull_request'
         uses: docker/login-action@v1
@@ -32,8 +29,6 @@ jobs:
         name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/arm/v7 \
-            --output "type=image,push=true" \
-            --output "type=image,push=true" \
-            -t fergalmoran/bitchmin-api \
-            --file ./server/Dockerfile ./server
+              --push \
+              --platform linux/arm/v7 \
+              -t fergalmoran/bitchmin-api -f ./server/Dockerfile ./server
