--- a/bitchmin-api/Dockerfile
+++ b/bitchmin-api/Dockerfile
@@ -1,10 +1,9 @@
 FROM python:3.7
 
 COPY ./requirements.txt /requirements.txt
-RUN apt update && \
-    apt install -y libblas-dev && \
-    pip install gunicorn
-
+RUN apt update
+RUN apt install -y libblas-dev
+RUN pip install gunicorn
 RUN pip install -r requirements.txt
 
 COPY app /app
