--- a/bitchmin-api/Dockerfile.ubuntu
+++ b/bitchmin-api/Dockerfile.ubuntu
@@ -1,16 +1,14 @@
-FROM python:3.8-alpine
+FROM python:3.7
 
 COPY ./requirements.txt /requirements.txt
+RUN apt-get -y update && \
+    apt-get -y dist-upgrade && \
+    apt-get -y install -y libblas-dev
 
-RUN apk update \
-  && apk add --virtual build-deps gcc python3-dev musl-dev \
-  && apk add postgresql-dev \
-  && pip install -r requirements.txt \
-  && pip install gunicorn \
-  && apk del build-deps
+RUN pip install gunicorn
+RUN pip install -r requirements.txt
 
 COPY app /app
-COPY .env /
 COPY migrations /migrations
 COPY server.py boot.sh ./
 RUN chmod +x boot.sh
